; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/test/src/extr_thd.c_thd_create.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/test/src/extr_thd.c_thd_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"Error in pthread_create()\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thd_create(i32* %0, i8* (i8*)* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8* (i8*)*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* (i8*)* %1, i8* (i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i8* (i8*)*, i8* (i8*)** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i64 @pthread_create(i32* %7, i32* null, i8* (i8*)* %8, i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = call i32 @test_fail(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %3
  ret void
}

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i8* (i8*)*, i8*) #1

declare dso_local i32 @test_fail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
